--- a/style.css
+++ b/style.css
@@ -62,9 +62,6 @@ p {
     display: none;
 }
 
-.slides input{
-    display: none;
-}
 
 .slide{
     width: 25%;
@@ -76,6 +73,30 @@ p {
     width: 800px;
 }
 
+.manual-navigation{
+    position: absolute;
+    width: 800px;
+    margin-top: -40px;
+    display: flex;
+    justify-content: right;
+}
+
+.manual-btn{
+    border: 2px solid #fff;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+    margin-right: 40px;
+}
+
+.manual-btn:hover{
+    background-color: #d3e6df;
+}
+
 #radio1:checked ~ .firts{
     margin-left: 0;
 }
@@ -85,19 +106,11 @@ p {
 }
 
 #radio3:checked ~ .firts{
-    margin-left: -52.3%;
+    margin-left: -50%;
 }
 
 #radio4:checked ~ .firts{
-    margin-left: -77.3%;
-}
-
-.navigation-auto div{
-    border: 2px solid white;
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
+    margin-left: -75%;
 }
 
 .navigation-auto{
@@ -111,6 +124,7 @@ p {
 .navigation-auto div:not(:last-child){
     margin-right: 40px;
 }
+
 
 #radio1:checked ~ .navigation-auto .auto-btn1{
     background-color: #d3e6df;
@@ -127,8 +141,6 @@ p {
 #radio4:checked ~ .navigation-auto .auto-btn4{
     background-color: #d3e6df;
 }
-
-
 
 .btn {
     background-color: var(--btn-bg-color);
@@ -219,13 +231,33 @@ nav ul a:hover::after {
 }
 
 .parada-rpbc .parada-rpbc-img {
-    width: 60%;
+    width: 30%;
 }
 
 .parada-rpbc .parada-rpbc-img img {
     width: 60%;
-    transition: transform 0.3s ease;
+    border-radius: 10px;
 }
+
+.parada-rpbc .parada-rpbc-img{
+    width: 30rem;
+    height: 33rem;
+    position: relative;
+    display: flex;
+    overflow: auto;
+    scroll-snap-type: x mandatory;
+}
+
+.parada-rpbc .parada-rpbc-img img{
+    width: 100%;
+    height: 100%;
+    position: sticky;
+    left: 0;
+    flex-shrink: 0;
+    object-fit: cover;
+    scroll-behavior: smooth;
+}
+    
 
 .escopos h3, .escopos p {
     text-align: center;
